--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
+   <!-- Add this line below -->
+  <meta name="google-adsense-account" content="ca-pub-5625655960879652">
+  <!-- Done -->
+  
   <title>SemanticData</title>
 
 
@@ -869,5 +873,6 @@
 
 
 </body>
+
 
 </html>
